--- a/LibraryApp/LibraryApp/Web.config
+++ b/LibraryApp/LibraryApp/Web.config
@@ -58,7 +58,7 @@
       </basicHttpBinding>
     </bindings>
     <client>
-      <endpoint address="http://192.168.0.114:8088/LibraryWebService.asmx"
+      <endpoint address="http://www.libraryapponline.somee.com/LibraryWebService.asmx"
         binding="basicHttpBinding" bindingConfiguration="LibraryWebServiceSoap"
         contract="LibraryWS.LibraryWebServiceSoap" name="LibraryWebServiceSoap" />
     </client>
